Temporarily add js code from cdn

--- a/views/twig/scripts.twig
+++ b/views/twig/scripts.twig
@@ -1,4 +1,4 @@
-<script src="/livewire/js/livewire.js" data-turbolinks-eval="false"></script>
+<script src="https://cdn.jsdelivr.net/gh/spiral-packages/livewire@master/public/livewire.js" data-turbolinks-eval="false"></script>
 <script data-turbo-eval="false" data-turbolinks-eval="false" >
     if (window.livewire) {
         console.warn('Livewire: It looks like Livewire\'s @livewireScripts JavaScript assets have already been loaded. Make sure you aren\'t loading them twice.')
